# embedded-3dgfx

./: Cargo.toml  PHYSICS_EXAMPLES.md  README.md  RENDERING_TECHNIQUES.md
.github/workflows/: rust.yml
examples/: README.md  basic_rendering.rs  billboard_demo.rs  blinn_phong_demo.rs  dma_rendering_demo.rs  fog_dithering_demo.rs  gouraud_demo.rs  lighting_demo.rs  lod_demo.rs  newtons_cradle.rs  painters_algorithm_demo.rs  pendulum_demo.rs  physics_bouncing_balls.rs  physics_demo.rs  physics_domino_chain.rs  physics_newtons_cradle.rs  physics_pendulum.rs  physics_rolling_ball.rs  physics_stack_tower.rs  physics_wrecking_ball.rs  ragdoll_demo.rs  rotating_cube.rs  scene_viewer.rs  ssd_demo.rs  stl_viewer.rs  texture_mapping_demo.rs  vertex_animation_demo.rs
load_stl/: Cargo.toml
load_stl/src/: lib.rs
src/: animation.rs  billboard.rs  camera.rs  display_backend.rs  draw.rs  lib.rs  lut.rs  mesh.rs  painters.rs  perfcounter.rs  physics.rs  swapchain.rs  texture.rs
tests/: integration_tests.rs
