workspace = { members = ["load_stl"] }
[package]
name = "embedded-3dgfx"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/leftger/embedded-3dgfx"
readme = "./README.md"
description = "3D graphics rendering for embedded systems (fork of embedded-gfx by Kezii)"
keywords = [
    "embedded-graphics",
    "graphics",
    "embedded",
    "3d",
]
categories = [
    "embedded",
]

# This is a fork of embedded-gfx (https://github.com/Kezii/embedded-gfx)
# Original author: Kezii
# Fork adds: texture mapping, fog/dithering effects, DMA rendering, Z-buffer improvements

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = []

[dependencies]
embedded-graphics-core = "0.4.0"
embedded-graphics-framebuf = "0.3"
log = "0.4"
nalgebra = { version = "0.34", default-features = false, features = [ "libm" ] }
line_drawing = "1.0"
heapless = "0.9"
embassy-time = { version = "0.5", default-features = false, optional = true }

[lib]
name = "embedded_3dgfx"
path = "src/lib.rs"

[dev-dependencies]
embedded-graphics-simulator = "0.8"
embedded-graphics = "0.8"
load_stl = { path = "load_stl" }